Kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: movieverse-service

spec:
  selector:
    app: movieverse

  type: NodePort

  ports:

  - port: 80

    targetPort: 80

    nodePort: 30080
