Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: movieverse-ingress

spec:
  ingressClassName: traefik

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: movieverse-service

            port:
              number: 80
